trunk/Archive2/6b/f5b738b8e9cc88/output
main.cpp: In function 'int main()':
main.cpp:30:5: error: 'cout' is not a member of 'std'
     std::cout << it->first << ": " << it->second << "\n";
     ^
main.cpp:30:20: error: base operand of '->' is not a pointer
     std::cout << it->first << ": " << it->second << "\n";
                    ^
main.cpp:30:41: error: base operand of '->' is not a pointer
     std::cout << it->first << ": " << it->second << "\n";
                                         ^
